@@ -1,4 +1,4 @@
 DIST chm2pdf-0.9.tar.gz 16699 RMD160 557895167a3d760a680ae49455d1da36efaa02f0 SHA1 b011cd38fb35fc485b0adc114eb12a0be5fa4954 SHA256 7152328d28aed322e41394e706609e81aa96eaf2cef4654494a1279a97528d07
-EBUILD chm2pdf-0.9.ebuild 518 RMD160 54417c07faf423be9dfefa3bc097093b09822597 SHA1 ecd2056722c4f872540b8100bdef5d393865df90 SHA256 db47c3638459954893563885caa1234e2cf633bc8f2fc263251ddfd41e68e588
-MISC ChangeLog 251 RMD160 0c4d22919f545c8b8c7a5d586fad609d41f3f269 SHA1 1c341baa131e7187a86f43277ce094216e9047c7 SHA256 95b5d26989271da287b0739fde0e62b9b12f11f8d3870ca666c7b0a26aa5747c
+EBUILD chm2pdf-0.9.ebuild 511 RMD160 002404d35f36eb940bba4795c67c4ec84a8a5415 SHA1 3794bad8761314133a3f07866e8bfc8b6a11c645 SHA256 8636293e35b8c66954899ba98f9e92b1cbbdadf5349b175116928343434599bc
+MISC ChangeLog 342 RMD160 d01d33e992d151e16784ad78f4d8c2fb1de163a1 SHA1 23935a3fdde91245fa083f8bf25a226f16bf984b SHA256 eaef446eaf28bcc0e4d2c81f341be17263e2d523d8fcccd9d192002d996288f8
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
