@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Jul 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  chm2pdf-0.9.ebuild:
+  Whitey
+
   09 Jul 2008; Markos Chandras (hwoarang) <gentoo@silverarrow.gr>
   +chm2pdf-0.9.ebuild, +metadata.xml:
   New Ebuild for bug #205208
